--- a/modules/net/src/Heal.Net.DbMigrator/Heal.Net.DbMigrator.csproj
+++ b/modules/net/src/Heal.Net.DbMigrator/Heal.Net.DbMigrator.csproj
@@ -4,8 +4,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <TargetFramework>$(MicrosoftTargetFramework)</TargetFramework>
     <RootNamespace>Heal.Net.DbMigrator</RootNamespace>
   </PropertyGroup>
 
