--- a/modules/net/src/Heal.Net.HttpApi.Host/Heal.Net.HttpApi.Host.csproj
+++ b/modules/net/src/Heal.Net.HttpApi.Host/Heal.Net.HttpApi.Host.csproj
@@ -3,8 +3,7 @@
   <Import Project="..\..\..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <TargetFramework>$(MicrosoftTargetFramework)</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
     <RootNamespace>Heal.Net.HttpApi.Host</RootNamespace>
     <PreserveCompilationReferences>true</PreserveCompilationReferences>
