--- a/modules/net/src/Heal.Net.EntityFrameworkCore/Heal.Net.EntityFrameworkCore.csproj
+++ b/modules/net/src/Heal.Net.EntityFrameworkCore/Heal.Net.EntityFrameworkCore.csproj
@@ -8,6 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\..\..\..\framework\src\Heal.EntityFrameworkCore\Heal.EntityFrameworkCore.csproj" />
 		<ProjectReference Include="..\Heal.Net.Domain\Heal.Net.Domain.csproj" />
 	</ItemGroup>
 
