--- a/modules/net/src/Heal.Net.Application/Heal.Net.Application.csproj
+++ b/modules/net/src/Heal.Net.Application/Heal.Net.Application.csproj
@@ -8,6 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\..\..\..\framework\src\Heal.Application\Heal.Application.csproj" />
 		<ProjectReference Include="..\Heal.Net.Domain\Heal.Net.Domain.csproj" />
 		<ProjectReference Include="..\Heal.Net.Application.Contracts\Heal.Net.Application.Contracts.csproj" />
 	</ItemGroup>
