--- a/modules/net/src/Heal.Net.HttpApi/Heal.Net.HttpApi.csproj
+++ b/modules/net/src/Heal.Net.HttpApi/Heal.Net.HttpApi.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\framework\src\Heal.HttpApi\Heal.HttpApi.csproj" />
     <ProjectReference Include="..\Heal.Net.Application.Contracts\Heal.Net.Application.Contracts.csproj" />
   </ItemGroup>
 
