--- a/version.props
+++ b/version.props
@@ -1,12 +1,16 @@
 ﻿<Project>
 	<PropertyGroup>
+		<!-- CSharp Language Version Packages -->
 		<LangVersion>preview</LangVersion>
+		<!-- Current Version Packages -->
 		<Version>2.0.0</Version>
 		<!-- All Microsoft TargetFrameworks Packages -->
 		<MicrosoftTargetFramework>net9.0</MicrosoftTargetFramework>
 		<!-- All Abp Version Packages -->
 		<AbpVersion>9.0.6</AbpVersion>
+		<!-- All Abp Theme Version Packages -->
 		<AbpLeptonXLiteThemeVersion>4.0.7</AbpLeptonXLiteThemeVersion>
+		<!-- All Abp Studio Clien Version Packages -->
 		<AbpStudioClientVersion>0.9.23</AbpStudioClientVersion>
 	</PropertyGroup>
 </Project>
