--- a/modules/net/src/Heal.Net.AuthServer.HttpApi/Heal.Net.AuthServer.HttpApi.csproj
+++ b/modules/net/src/Heal.Net.AuthServer.HttpApi/Heal.Net.AuthServer.HttpApi.csproj
@@ -4,7 +4,7 @@
 
   <PropertyGroup>
     <TargetFramework>$(MicrosoftTargetFramework)</TargetFramework>
-    <RootNamespace>Heal.Net.HttpApi</RootNamespace>
+    <RootNamespace>Heal.Net.AuthServer.HttpApi</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
