--- a/framework/src/Heal.Domain.Shared/Heal.Domain.Shared.csproj
+++ b/framework/src/Heal.Domain.Shared/Heal.Domain.Shared.csproj
@@ -5,6 +5,60 @@
     <TargetFramework>$(MicrosoftTargetFramework)</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Localization\Heal\ar.json" />
+    <None Remove="Localization\Heal\cs.json" />
+    <None Remove="Localization\Heal\de.json" />
+    <None Remove="Localization\Heal\en-GB.json" />
+    <None Remove="Localization\Heal\en.json" />
+    <None Remove="Localization\Heal\es.json" />
+    <None Remove="Localization\Heal\fi.json" />
+    <None Remove="Localization\Heal\fr.json" />
+    <None Remove="Localization\Heal\hi.json" />
+    <None Remove="Localization\Heal\hr.json" />
+    <None Remove="Localization\Heal\hu.json" />
+    <None Remove="Localization\Heal\is.json" />
+    <None Remove="Localization\Heal\it.json" />
+    <None Remove="Localization\Heal\nl.json" />
+    <None Remove="Localization\Heal\pl-PL.json" />
+    <None Remove="Localization\Heal\pt-BR.json" />
+    <None Remove="Localization\Heal\ro-RO.json" />
+    <None Remove="Localization\Heal\ru.json" />
+    <None Remove="Localization\Heal\sk.json" />
+    <None Remove="Localization\Heal\sl.json" />
+    <None Remove="Localization\Heal\tr.json" />
+    <None Remove="Localization\Heal\vi.json" />
+    <None Remove="Localization\Heal\zh-Hans.json" />
+    <None Remove="Localization\Heal\zh-Hant.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Localization\Heal\ar.json" />
+    <EmbeddedResource Include="Localization\Heal\cs.json" />
+    <EmbeddedResource Include="Localization\Heal\de.json" />
+    <EmbeddedResource Include="Localization\Heal\en-GB.json" />
+    <EmbeddedResource Include="Localization\Heal\en.json" />
+    <EmbeddedResource Include="Localization\Heal\es.json" />
+    <EmbeddedResource Include="Localization\Heal\fi.json" />
+    <EmbeddedResource Include="Localization\Heal\fr.json" />
+    <EmbeddedResource Include="Localization\Heal\hi.json" />
+    <EmbeddedResource Include="Localization\Heal\hr.json" />
+    <EmbeddedResource Include="Localization\Heal\hu.json" />
+    <EmbeddedResource Include="Localization\Heal\is.json" />
+    <EmbeddedResource Include="Localization\Heal\it.json" />
+    <EmbeddedResource Include="Localization\Heal\nl.json" />
+    <EmbeddedResource Include="Localization\Heal\pl-PL.json" />
+    <EmbeddedResource Include="Localization\Heal\pt-BR.json" />
+    <EmbeddedResource Include="Localization\Heal\ro-RO.json" />
+    <EmbeddedResource Include="Localization\Heal\ru.json" />
+    <EmbeddedResource Include="Localization\Heal\sk.json" />
+    <EmbeddedResource Include="Localization\Heal\sl.json" />
+    <EmbeddedResource Include="Localization\Heal\tr.json" />
+    <EmbeddedResource Include="Localization\Heal\vi.json" />
+    <EmbeddedResource Include="Localization\Heal\zh-Hans.json" />
+    <EmbeddedResource Include="Localization\Heal\zh-Hant.json" />
+  </ItemGroup>
+
 	<ItemGroup>
     <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Shared" />
 	</ItemGroup>
