--- a/framework/src/Heal.EntityFrameworkCore/Heal.EntityFrameworkCore.csproj
+++ b/framework/src/Heal.EntityFrameworkCore/Heal.EntityFrameworkCore.csproj
@@ -1,16 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="..\..\..\common.props" />
+  <Import Project="..\..\..\common.props"/>
 
   <PropertyGroup>
     <TargetFramework>$(MicrosoftTargetFramework)</TargetFramework>
   </PropertyGroup>
 
-	<ItemGroup>
-    <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" />
+  <ItemGroup>
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL"/>
+    <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore"/>
   </ItemGroup>
-
-	<ItemGroup>
-	  <ProjectReference Include="..\Heal.Domain\Heal.Domain.csproj" />
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational"/>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Heal.Domain\Heal.Domain.csproj"/>
+  </ItemGroup>
 </Project>
