--- a/modules/net/src/Heal.Net.AuthServer/Heal.Net.AuthServer.csproj
+++ b/modules/net/src/Heal.Net.AuthServer/Heal.Net.AuthServer.csproj
@@ -50,6 +50,9 @@
     <Content Remove="Logs\**" />
     <EmbeddedResource Remove="Logs\**" />
     <None Remove="Logs\**" />
+    <None Update="openiddict.pfx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
