--- a/framework/src/Heal.Application.Contracts/Heal.Application.Contracts.csproj
+++ b/framework/src/Heal.Application.Contracts/Heal.Application.Contracts.csproj
@@ -7,6 +7,7 @@
 
 	<ItemGroup>
     <PackageReference Include="Volo.Abp.PermissionManagement.Application.Contracts" />
+    <PackageReference Include="Volo.Abp.Identity.Application.Contracts" />
 	</ItemGroup>
 
 	<ItemGroup>
