--- a/framework/src/Heal.Domain.Shared/Heal.Domain.Shared.csproj
+++ b/framework/src/Heal.Domain.Shared/Heal.Domain.Shared.csproj
@@ -61,6 +61,7 @@
 
 	<ItemGroup>
     <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Shared" />
+    <PackageReference Include="Volo.Abp.Identity.Domain.Shared" />
 	</ItemGroup>
 
 </Project>
