--- a/framework/src/Heal.EntityFrameworkCore/Heal.EntityFrameworkCore.csproj
+++ b/framework/src/Heal.EntityFrameworkCore/Heal.EntityFrameworkCore.csproj
@@ -7,6 +7,7 @@
 
 	<ItemGroup>
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL" />
+    <PackageReference Include="Volo.Abp.Identity.EntityFrameworkCore" />
     <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" />
   </ItemGroup>
 
