--- a/modules/net/src/Heal.Net.HttpApi.Host/appsettings.json
+++ b/modules/net/src/Heal.Net.HttpApi.Host/appsettings.json
@@ -11,7 +11,11 @@
     "Authority": "https://localhost:44364",
     "RequireHttpsMetadata": true,
     "SwaggerClientId": "Heal_Swagger",
-    "CertificatePassPhrase": "fc3356c0-3ae2-4d9f-b9ad-e60c4a35ed01"
+    "CertificatePassPhrase": "fc3356c0-3ae2-4d9f-b9ad-e60c4a35ed01",
+    "ClientId": "Net_Web",
+    "ClientSecret": "1q2w3e*",
+    "Scope": "Net offline_access",
+    "GrantType": "net"
   },
   "StringEncryption": {
     "DefaultPassPhrase": "9rbV6arpFOn5TR1i"
