--- a/modules/net/src/Heal.Net.Application/Heal.Net.Application.csproj
+++ b/modules/net/src/Heal.Net.Application/Heal.Net.Application.csproj
@@ -22,4 +22,8 @@
 		<PackageReference Include="Volo.Abp.TenantManagement.Application" />
 	</ItemGroup>
 
+	<ItemGroup>
+    <PackageReference Include="IdentityModel" />
+    <PackageReference Include="Microsoft.Extensions.Http" />
+	</ItemGroup>
 </Project>
