feat:新增登录方式

--- a/modules/net/src/Heal.Net.HttpApi.Host/appsettings.json
+++ b/modules/net/src/Heal.Net.HttpApi.Host/appsettings.json
@@ -12,10 +12,10 @@
     "RequireHttpsMetadata": true,
     "SwaggerClientId": "Heal_Swagger",
     "CertificatePassPhrase": "fc3356c0-3ae2-4d9f-b9ad-e60c4a35ed01",
-    "ClientId": "Net_Web",
+    "ClientId": "HealNetApp",
     "ClientSecret": "1q2w3e*",
-    "Scope": "Net offline_access",
-    "GrantType": "net"
+    "Scope": "HealNetApp offline_access",
+    "GrantType": "heal_net_password"
   },
   "StringEncryption": {
     "DefaultPassPhrase": "9rbV6arpFOn5TR1i"
