docs:新增文档注释

--- a/framework/test/Sharding.Core.Test/Sharding.Core.Test.csproj
+++ b/framework/test/Sharding.Core.Test/Sharding.Core.Test.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <None Remove="Entities\Order.cs~RF1046a0.TMP" />
 	  <None Remove="Program.cs~RF5dc0cb.TMP" />
 	</ItemGroup>
 
