--- a/modules/net/src/Heal.Net.Application.Contracts/Heal.Net.Application.Contracts.csproj
+++ b/modules/net/src/Heal.Net.Application.Contracts/Heal.Net.Application.Contracts.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Bases\Users\IAccountAppService.cs~RF1a30e5.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\..\framework\src\Heal.Application.Contracts\Heal.Application.Contracts.csproj" />
     <ProjectReference Include="..\Heal.Net.Domain.Shared\Heal.Net.Domain.Shared.csproj" />
   </ItemGroup>
