docs:文档注释枚举生成注释

--- a/framework/src/Heal.Application.Contracts/Heal.Application.Contracts.csproj
+++ b/framework/src/Heal.Application.Contracts/Heal.Application.Contracts.csproj
@@ -3,6 +3,7 @@
 
 	<PropertyGroup>
     <TargetFramework>$(MicrosoftTargetFramework)</TargetFramework>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
 	</PropertyGroup>
 
 	<ItemGroup>
