--- a/modules/net/src/Heal.Net.Application.Contracts/Heal.Net.Application.Contracts.csproj
+++ b/modules/net/src/Heal.Net.Application.Contracts/Heal.Net.Application.Contracts.csproj
@@ -5,6 +5,7 @@
   <PropertyGroup>
     <TargetFramework>$(MicrosoftTargetFramework)</TargetFramework>
     <RootNamespace>Heal.Net.Application.Contracts</RootNamespace>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
