--- a/modules/net/src/Heal.Net.Domain.Shared/Heal.Net.Domain.Shared.csproj
+++ b/modules/net/src/Heal.Net.Domain.Shared/Heal.Net.Domain.Shared.csproj
@@ -6,6 +6,7 @@
     <TargetFramework>$(MicrosoftTargetFramework)</TargetFramework>
     <RootNamespace>Heal.Net.Domain.Shared</RootNamespace>
     <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
