--- a/modules/net/src/Heal.Net.HttpApi/Heal.Net.HttpApi.csproj
+++ b/modules/net/src/Heal.Net.HttpApi/Heal.Net.HttpApi.csproj
@@ -4,6 +4,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>$(MicrosoftTargetFramework)</TargetFramework>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
