--- a/modules/net/src/Heal.Net.AuthServer/appsettings.json
+++ b/modules/net/src/Heal.Net.AuthServer/appsettings.json
@@ -1,8 +1,9 @@
-{
+﻿{
   "App": {
     "SelfUrl": "https://localhost:44364",
     "DisablePII": false,
-    "HealthCheckUrl": "/health-status"
+    "HealthCheckUrl": "/health-status",
+    "CorsOrigins": "https://localhost:44364,https://localhost:62513"
   },
   "ConnectionStrings": {
     "Default": "Server=192.168.5.245;Port=3306;Database=heal;Uid=root;Pwd=123456;"
