--- a/framework/src/Heal.Domain.Shared/Heal.Domain.Shared.csproj
+++ b/framework/src/Heal.Domain.Shared/Heal.Domain.Shared.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
 
 	<ItemGroup>
+    <PackageReference Include="PinYin" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Shared" />
     <PackageReference Include="Volo.Abp.Identity.Domain.Shared" />
 	</ItemGroup>
