feat:添加机构 院区 科室

--- a/modules/net/src/Heal.Net.EntityFrameworkCore/Heal.Net.EntityFrameworkCore.csproj
+++ b/modules/net/src/Heal.Net.EntityFrameworkCore/Heal.Net.EntityFrameworkCore.csproj
@@ -36,4 +36,9 @@
 		</PackageReference>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="EntityFrameworkCore\Bases\Campuses\" />
+	  <Folder Include="EntityFrameworkCore\Bases\Departments\" />
+	</ItemGroup>
+
 </Project>
