feat:院区添加字段

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -129,7 +129,6 @@
     <PackageVersion Include="OpenIddict.Validation.AspNetCore" Version="5.8.0" />
     <PackageVersion Include="OpenIddict.Validation.ServerIntegration" Version="5.8.0" />
     <PackageVersion Include="Oracle.EntityFrameworkCore" Version="9.23.60" />
-    <PackageVersion Include="PinYin" Version="1.0.1" />
     <PackageVersion Include="Polly" Version="8.4.2" />
     <PackageVersion Include="Polly.Extensions.Http" Version="3.0.0" />
     <PackageVersion Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0-preview.3.efcore.9.0.0" />
@@ -174,6 +173,7 @@
     <PackageVersion Include="System.Text.Json" Version="9.0.0" />
     <PackageVersion Include="System.IdentityModel.Tokens.Jwt" Version="8.1.0" />
     <PackageVersion Include="TimeZoneConverter" Version="6.1.0" />
+    <PackageVersion Include="TinyPinyin" Version="1.1.0" />
     <PackageVersion Include="Unidecode.NET" Version="2.1.0" />
     <PackageVersion Include="xunit" Version="2.9.2" />
     <PackageVersion Include="xunit.extensibility.execution" Version="2.9.2" />
