--- a/modules/net/src/Heal.Net.HttpApi.Host/appsettings.Home.json
+++ b/modules/net/src/Heal.Net.HttpApi.Host/appsettings.Home.json
@@ -11,8 +11,76 @@
     "Authority": "https://localhost:44364",
     "RequireHttpsMetadata": true,
     "SwaggerClientId": "Heal_Swagger",
-    "CertificatePassPhrase": "d5971ec4-443f-407f-8786-cc01dd9c722a"
+    "CertificatePassPhrase": "fc3356c0-3ae2-4d9f-b9ad-e60c4a35ed01",
+    "ClientId": "HealNetApp",
+    "ClientSecret": "1q2w3e*",
+    "Scope": "HealNetApp offline_access",
+    "GrantType": "heal_net_password"
   },
   "StringEncryption": {
     "DefaultPassPhrase": "9rbV6arpFOn5TR1i"
-  }}
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Expressions", "Serilog.Sinks.Async" ],
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Debug",
+        "Microsoft.EntityFrameworkCore": "Debug"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "Async",
+        "Args": {
+          "configure": [
+            {
+              "Name": "File",
+              "Args": {
+                "path": "logs/logs.log",
+                "rollingInterval": "Day",
+                "retainedFileCountLimit": 31,
+                "retainedFileTimeLimit": "31.00:00:00",
+                "outputHis.Medical.Record": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+              }
+            }
+          ]
+        }
+      },
+      {
+        "Name": "Conditional",
+        "Args": {
+          "expression": "StartsWith(SourceContext, 'Hospital.Fw.Mo.Logging.AopLog.LoggerAttribute')",
+          "configureSink": [
+            {
+              "Name": "File",
+              "Args": {
+                "path": "logs/aop/logs.log",
+                "rollingInterval": "Day",
+                "outputHis.Medical.Record": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+              }
+            }
+          ]
+        }
+      },
+      {
+        "Name": "Conditional",
+        "Args": {
+          "expression": "StartsWith(EventId_Name, 'SqlSugarCoreExtensions')",
+          "configureSink": [
+            {
+              "Name": "File",
+              "Args": {
+                "path": "logs/sql/logs.log",
+                "rollingInterval": "Day",
+                "outputHis.Medical.Record": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+              }
+            }
+          ]
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+  }
+}
