feat:新增模块管理

--- a/modules/net/src/Heal.Net.Application.Contracts/Heal.Net.Application.Contracts.csproj
+++ b/modules/net/src/Heal.Net.Application.Contracts/Heal.Net.Application.Contracts.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Bases\Permissions\IMenuAppService.cs~RF16d1609.TMP" />
     <None Remove="Bases\Users\IAccountAppService.cs~RF1a30e5.TMP" />
   </ItemGroup>
 
