docs:更新漏洞包

--- a/modules/net/src/Heal.Net.EntityFrameworkCore/Heal.Net.EntityFrameworkCore.csproj
+++ b/modules/net/src/Heal.Net.EntityFrameworkCore/Heal.Net.EntityFrameworkCore.csproj
@@ -32,7 +32,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-			<PrivateAssets>compile; contentFiles; build; buildMultitargeting; buildTransitive; analyzers; native</PrivateAssets>
+			<PrivateAssets>compile; build; native; contentfiles; analyzers; buildtransitive</PrivateAssets>
 		</PackageReference>
 	</ItemGroup>
 
