--- a/modules/net/src/Heal.Net.Application/Heal.Net.Application.csproj
+++ b/modules/net/src/Heal.Net.Application/Heal.Net.Application.csproj
@@ -27,7 +27,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-    <PackageReference Include="IdentityModel" />
+    <PackageReference Include="Duende.IdentityModel" />
     <PackageReference Include="Microsoft.Extensions.Http" />
 	</ItemGroup>
 </Project>
