--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -114,6 +114,7 @@
     <PackageVersion Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.9.0" />
     <PackageVersion Include="Minio" Version="6.0.3" />
     <PackageVersion Include="MongoDB.Driver" Version="2.29.0" />
+    <PackageVersion Include="MessagePack" Version="3.1.3" />
     <PackageVersion Include="NEST" Version="7.17.5" />
     <PackageVersion Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageVersion Include="Nito.AsyncEx.Context" Version="5.1.2" />
