--- a/modules/net/src/Heal.Net.AuthServer/Heal.Net.AuthServer.csproj
+++ b/modules/net/src/Heal.Net.AuthServer/Heal.Net.AuthServer.csproj
@@ -44,6 +44,11 @@
   </ItemGroup>
 
   <ItemGroup>
+		<!--源版本是2.2.85 更新漏洞到 3.1.3--> 
+    <PackageReference Include="MessagePack" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Remove="Logs\**" />
     <Content Remove="Logs\**" />
     <EmbeddedResource Remove="Logs\**" />
