--- a/version.props
+++ b/version.props
@@ -7,7 +7,7 @@
 		<!-- All Microsoft TargetFrameworks Packages -->
 		<MicrosoftTargetFramework>net9.0</MicrosoftTargetFramework>
 		<!-- All Abp Version Packages -->
-		<AbpVersion>9.1.1</AbpVersion>
+		<AbpVersion>9.2.0-rc.2</AbpVersion>
 		<!-- All Abp Theme Version Packages -->
 		<AbpLeptonXLiteThemeVersion>4.1.1</AbpLeptonXLiteThemeVersion>
 		<!-- All Abp Studio Clien Version Packages -->
