feat: 抽离核心模块

--- a/modules/net/src/Heal.Net.Domain.Shared/Heal.Net.Domain.Shared.csproj
+++ b/modules/net/src/Heal.Net.Domain.Shared/Heal.Net.Domain.Shared.csproj
@@ -31,6 +31,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\framework\src\Heal.Domain.Shared\Heal.Domain.Shared.csproj" />
+    <ProjectReference Include="..\..\..\core\src\Heal.Core.Domain.Shared\Heal.Core.Domain.Shared.csproj" />
   </ItemGroup>
 
 </Project>
