--- a/modules/net/src/Heal.Net.EntityFrameworkCore/Heal.Net.EntityFrameworkCore.csproj
+++ b/modules/net/src/Heal.Net.EntityFrameworkCore/Heal.Net.EntityFrameworkCore.csproj
@@ -9,6 +9,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\..\..\framework\src\Heal.EntityFrameworkCore\Heal.EntityFrameworkCore.csproj" />
+		<ProjectReference Include="..\..\..\core\src\Heal.Core.EntityFrameworkCore\Heal.Core.EntityFrameworkCore.csproj" />
 		<ProjectReference Include="..\Heal.Net.Domain\Heal.Net.Domain.csproj" />
 	</ItemGroup>
 
