--- a/modules/dict/src/Heal.Dict.EntityFrameworkCore/Heal.Dict.EntityFrameworkCore.csproj
+++ b/modules/dict/src/Heal.Dict.EntityFrameworkCore/Heal.Dict.EntityFrameworkCore.csproj
@@ -11,4 +11,15 @@
     <ProjectReference Include="..\Heal.Dict.Domain\Heal.Dict.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+      <PrivateAssets>compile; build; native; contentfiles; analyzers; buildtransitive</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\Script\" />
+  </ItemGroup>
+
 </Project>
