feat:本地资源更新

--- a/framework/src/Heal.Domain.Shared/Heal.Domain.Shared.csproj
+++ b/framework/src/Heal.Domain.Shared/Heal.Domain.Shared.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <None Remove="Localization\Heal\en.json" />
+    <None Remove="Localization\Heal\en.json~RF11b05eb.TMP" />
     <None Remove="Localization\Heal\zh-Hans.json" />
   </ItemGroup>
 
