feat:添加自签名证书支持java对接

--- a/modules/net/src/Heal.Net.AuthServer/Heal.Net.AuthServer.csproj
+++ b/modules/net/src/Heal.Net.AuthServer/Heal.Net.AuthServer.csproj
@@ -53,7 +53,7 @@
     <Content Remove="Logs\**" />
     <EmbeddedResource Remove="Logs\**" />
     <None Remove="Logs\**" />
-    <None Update="openiddict.pfx">
+    <None Update="server.pfx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
