--- a/modules/net/src/Heal.Net.AuthServer/Properties/launchSettings.json
+++ b/modules/net/src/Heal.Net.AuthServer/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -18,7 +18,7 @@
     "Heal.HttpApi.Host": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:44364",
+      "applicationUrl": "http://localhost:44364",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
