--- a/modules/net/src/Heal.Net.AuthServer/appsettings.json
+++ b/modules/net/src/Heal.Net.AuthServer/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "App": {
-    "SelfUrl": "https://localhost:44364",
+    "SelfUrl": "http://localhost:44364",
     "DisablePII": false,
     "HealthCheckUrl": "/health-status",
     "CorsOrigins": "https://localhost:44364,https://localhost:62513"
@@ -9,10 +9,10 @@
     "Default": "Server=192.168.5.245;Port=3306;Database=heal;Uid=root;Pwd=123456;"
   },
   "AuthServer": {
-    "Authority": "https://localhost:44364",
+    "Authority": "http://localhost:44364",
     "RequireHttpsMetadata": true,
     "SwaggerClientId": "Heal_Swagger",
-    "CertificatePassPhrase": "fc3356c0-3ae2-4d9f-b9ad-e60c4a35ed01"
+    "CertificatePassPhrase": "123456"
   },
   "StringEncryption": {
     "DefaultPassPhrase": "9rbV6arpFOn5TR1i"
