--- a/modules/net/src/Heal.Net.AuthServer/appsettings.json
+++ b/modules/net/src/Heal.Net.AuthServer/appsettings.json
@@ -3,14 +3,14 @@
     "SelfUrl": "http://localhost:44364",
     "DisablePII": false,
     "HealthCheckUrl": "/health-status",
-    "CorsOrigins": "https://localhost:44364,https://localhost:62513"
+    "CorsOrigins": "http://localhost:44364,http://localhost:62513"
   },
   "ConnectionStrings": {
     "Default": "Server=192.168.5.245;Port=3306;Database=heal;Uid=root;Pwd=123456;"
   },
   "AuthServer": {
     "Authority": "http://localhost:44364",
-    "RequireHttpsMetadata": true,
+    "RequireHttpsMetadata": false,
     "SwaggerClientId": "Heal_Swagger",
     "CertificatePassPhrase": "123456"
   },
