--- a/modules/net/src/Heal.Net.HttpApi.Host/appsettings.json
+++ b/modules/net/src/Heal.Net.HttpApi.Host/appsettings.json
@@ -3,14 +3,14 @@
     "SelfUrl": "http://localhost:44364",
     "DisablePII": false,
     "HealthCheckUrl": "/health-status",
-    "CorsOrigins": "https://localhost:44364,https://localhost:62513,http://localhost:4000"
+    "CorsOrigins": "http://localhost:44364,http://localhost:62513,http://localhost:4000"
   },
   "ConnectionStrings": {
     "Default": "Server=192.168.5.245;Port=3306;Database=heal;Uid=root;Pwd=123456;"
   },
   "AuthServer": {
     "Authority": "http://localhost:44364",
-    "RequireHttpsMetadata": true,
+    "RequireHttpsMetadata": false,
     "SwaggerClientId": "Heal_Swagger",
     "CertificatePassPhrase": "fc3356c0-3ae2-4d9f-b9ad-e60c4a35ed01",
     "ClientId": "HealNetApp",
