--- a/modules/net/src/Heal.Net.HttpApi.Host/appsettings.json
+++ b/modules/net/src/Heal.Net.HttpApi.Host/appsettings.json
@@ -3,7 +3,7 @@
     "SelfUrl": "http://localhost:44364",
     "DisablePII": false,
     "HealthCheckUrl": "/health-status",
-    "CorsOrigins": "http://localhost:44364,http://localhost:62513,http://localhost:4000"
+    "CorsOrigins": "http://localhost:44364,http://localhost:62513,http://localhost:4000,http://localhost:5200"
   },
   "ConnectionStrings": {
     "Default": "Server=192.168.5.245;Port=3306;Database=heal;Uid=root;Pwd=123456;"
