--- a/modules/net/src/Heal.Net.HttpApi.Host/appsettings.json
+++ b/modules/net/src/Heal.Net.HttpApi.Host/appsettings.json
@@ -43,7 +43,7 @@
                 "rollingInterval": "Day",
                 "retainedFileCountLimit": 31,
                 "retainedFileTimeLimit": "31.00:00:00",
-                "outputHis.Medical.Record": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+                "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
               }
             }
           ]
@@ -59,7 +59,7 @@
               "Args": {
                 "path": "logs/aop/logs.log",
                 "rollingInterval": "Day",
-                "outputHis.Medical.Record": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+                "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
               }
             }
           ]
@@ -75,7 +75,7 @@
               "Args": {
                 "path": "logs/sql/logs.log",
                 "rollingInterval": "Day",
-                "outputHis.Medical.Record": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+                "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
               }
             }
           ]
