refactor(net): 修改数据库连接字符串和认证服务器配置
- 更新 AuthServer 和 HttpApi Host 的数据库连接字符串为本地地址
- 修改 AuthServer 配置，使用 HTTP而不是 HTTPS，并设置简单密码
- 在 HttpApi Host 中添加 CORS 原始设置
- 修正日志输出模板配置

--- a/modules/net/src/Heal.Net.AuthServer/appsettings.Home.json
+++ b/modules/net/src/Heal.Net.AuthServer/appsettings.Home.json
@@ -8,10 +8,10 @@
     "Default": "Server=127.0.0.1;Port=3306;Database=heal;Uid=root;Pwd=123456;"
   },
   "AuthServer": {
-    "Authority": "https://localhost:44364",
-    "RequireHttpsMetadata": true,
+    "Authority": "http://localhost:44364",
+    "RequireHttpsMetadata": false,
     "SwaggerClientId": "Heal_Swagger",
-    "CertificatePassPhrase": "fc3356c0-3ae2-4d9f-b9ad-e60c4a35ed01"
+    "CertificatePassPhrase": "123456"
   },
   "StringEncryption": {
     "DefaultPassPhrase": "9rbV6arpFOn5TR1i"
