--- a/modules/net/src/Heal.Net.HttpApi.Host/appsettings.Home.json
+++ b/modules/net/src/Heal.Net.HttpApi.Host/appsettings.Home.json
@@ -2,14 +2,15 @@
   "App": {
     "SelfUrl": "https://localhost:44364",
     "DisablePII": false,
-    "HealthCheckUrl": "/health-status"
+    "HealthCheckUrl": "/health-status",
+    "CorsOrigins": "http://localhost:44364,http://localhost:62513,http://localhost:4000,http://localhost:5200"
   },
   "ConnectionStrings": {
     "Default": "Server=127.0.0.1;Port=3306;Database=heal;Uid=root;Pwd=123456;"
   },
   "AuthServer": {
-    "Authority": "https://localhost:44364",
-    "RequireHttpsMetadata": true,
+    "Authority": "http://localhost:44364",
+    "RequireHttpsMetadata": false,
     "SwaggerClientId": "Heal_Swagger",
     "CertificatePassPhrase": "fc3356c0-3ae2-4d9f-b9ad-e60c4a35ed01",
     "ClientId": "HealNetApp",
@@ -42,7 +43,7 @@
                 "rollingInterval": "Day",
                 "retainedFileCountLimit": 31,
                 "retainedFileTimeLimit": "31.00:00:00",
-                "outputHis.Medical.Record": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+                "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
               }
             }
           ]
@@ -58,7 +59,7 @@
               "Args": {
                 "path": "logs/aop/logs.log",
                 "rollingInterval": "Day",
-                "outputHis.Medical.Record": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+                "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
               }
             }
           ]
@@ -74,7 +75,7 @@
               "Args": {
                 "path": "logs/sql/logs.log",
                 "rollingInterval": "Day",
-                "outputHis.Medical.Record": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+                "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
               }
             }
           ]
