Revert "doc:10.0.0-rc1"

--- a/framework/test/Sharding.Core.Test/Sharding.Core.Test.csproj
+++ b/framework/test/Sharding.Core.Test/Sharding.Core.Test.csproj
@@ -12,8 +12,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" />
 	  <PackageReference Include="ShardingCore" />
-    <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL.Pomelo" />
 	</ItemGroup>
 
 </Project>
