--- a/modules/core/src/Heal.Core.EntityFrameworkCore/Heal.Core.EntityFrameworkCore.csproj
+++ b/modules/core/src/Heal.Core.EntityFrameworkCore/Heal.Core.EntityFrameworkCore.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Volo.Abp.Dapper" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL.Pomelo" />
     <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" />
    
   </ItemGroup>
