--- a/modules/net/src/Heal.Net.AuthServer/Heal.Net.AuthServer.csproj
+++ b/modules/net/src/Heal.Net.AuthServer/Heal.Net.AuthServer.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.HealthChecks.UI" />
+    <PackageReference Include="AspNetCore.HealthChecks.UI.Client" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" />
+    <PackageReference Include="AspNetCore.HealthChecks.UI.InMemory.Storage" />
     <PackageReference Include="Serilog.AspNetCore" />
     <PackageReference Include="Serilog.Sinks.Async" />
   </ItemGroup>
@@ -37,6 +41,11 @@
 
   <ItemGroup>
     <PackageReference Include="Volo.Abp.Studio.Client.AspNetCore" />
+  </ItemGroup>
+
+  <ItemGroup>
+		<!--源版本是2.2.85 更新漏洞到 3.1.3--> 
+    <PackageReference Include="MessagePack" />
   </ItemGroup>
 
   <ItemGroup>
