--- a/modules/net/src/Heal.Net.Domain.Shared/Heal.Net.Domain.Shared.csproj
+++ b/modules/net/src/Heal.Net.Domain.Shared/Heal.Net.Domain.Shared.csproj
@@ -26,6 +26,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\core\src\Heal.Core.Domain.Shared\Heal.Core.Domain.Shared.csproj" />
   </ItemGroup>
 
