--- a/version.props
+++ b/version.props
@@ -3,15 +3,14 @@
 		<!-- CSharp Language Version Packages -->
 		<LangVersion>preview</LangVersion>
 		<!-- Current Version Packages -->
-		<Version>10.0.0-rc1</Version>
+		<Version>9.3.6</Version>
 		<!-- All Microsoft TargetFrameworks Packages -->
-		<MicrosoftTargetFramework>net10.0</MicrosoftTargetFramework>
+		<MicrosoftTargetFramework>net9.0</MicrosoftTargetFramework>
 		<!-- All Abp Version Packages -->
-		<AbpVersion>10.0.0-rc.1</AbpVersion>
+		<AbpVersion>9.3.6</AbpVersion>
 		<!-- All Abp Theme Version Packages -->
 		<AbpLeptonXLiteThemeVersion>4.3.6</AbpLeptonXLiteThemeVersion>
 		<!-- All Abp Studio Clien Version Packages -->
 		<AbpStudioClientVersion>1.4.1</AbpStudioClientVersion>
-		<MicrosoftVersion>10.0.0-rc.2.25502.107</MicrosoftVersion>
 	</PropertyGroup>
 </Project>
