--- a/framework/test/Sharding.Core.Test/Sharding.Core.Test.csproj
+++ b/framework/test/Sharding.Core.Test/Sharding.Core.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<Import Project="..\..\..\common.props" />
 
@@ -12,7 +12,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL.Pomelo" />
 	  <PackageReference Include="ShardingCore" />
 	</ItemGroup>
 
