feat: update 10.0.0-rc3

--- a/modules/dict/src/Heal.Dict.HttpApi.Host/appsettings.json
+++ b/modules/dict/src/Heal.Dict.HttpApi.Host/appsettings.json
@@ -6,7 +6,7 @@
     "CorsOrigins": "https://localhost:44364,https://localhost:62513,http://localhost:4000"
   },
   "ConnectionStrings": {
-    "Default": "Server=192.168.5.245;Port=3306;Database=heal;Uid=root;Pwd=123456;"
+    "Default": "Server=192.168.5.245;Port=3306;Database=heal_new;Uid=root;Pwd=123456;"
   },
   "AuthServer": {
     "Authority": "https://localhost:44364",
