--- a/framework/test/Sharding.Core.Test/Sharding.Core.Test.csproj
+++ b/framework/test/Sharding.Core.Test/Sharding.Core.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<Import Project="..\..\..\common.props" />
 
@@ -13,7 +13,7 @@
 
 	<ItemGroup>
 	  <PackageReference Include="ShardingCore" />
-    <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL.Pomelo" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL" />
 	</ItemGroup>
 
 </Project>
