--- a/modules/net/src/Heal.Net.AuthServer/appsettings.Home.json
+++ b/modules/net/src/Heal.Net.AuthServer/appsettings.Home.json
@@ -5,7 +5,7 @@
     "HealthCheckUrl": "/health-status"
   },
   "ConnectionStrings": {
-    "Default": "Server=127.0.0.1;Port=3306;Database=heal;Uid=root;Pwd=123456;"
+    "Default": "Server=127.0.0.1;Port=3306;Database=heal_new;Uid=root;Pwd=123456;"
   },
   "AuthServer": {
     "Authority": "http://localhost:44364",
