--- a/modules/net/src/Heal.Net.HttpApi.Host/appsettings.json
+++ b/modules/net/src/Heal.Net.HttpApi.Host/appsettings.json
@@ -6,7 +6,7 @@
     "CorsOrigins": "http://localhost:44364,http://localhost:62513,http://localhost:4000,http://localhost:5200"
   },
   "ConnectionStrings": {
-    "Default": "Server=192.168.5.245;Port=3306;Database=heal;Uid=root;Pwd=123456;"
+    "Default": "Server=192.168.5.245;Port=3306;Database=heal_new;Uid=root;Pwd=123456;"
   },
   "AuthServer": {
     "Authority": "http://localhost:44364",
